[TUAN]: fix bugs