@@ -1,6 +1,7 @@
 package com.example.brandservice.service;
 
 import com.example.brandservice.dto.request.BrandRequest;
+import com.example.brandservice.dto.request.GetBrandsRequest;
 import com.example.brandservice.dto.response.BrandResponse;
 import com.example.brandservice.exception.AppException;
 import com.example.brandservice.exception.ErrorCode;
@@ -10,13 +11,15 @@ import com.example.brandservice.repository.BrandRepository;
 import com.example.brandservice.utility.CloudinaryUtil;
 import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDateTime;
-import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -79,11 +82,18 @@ public class BrandService {
         ));
     }
 
-    public List<BrandResponse> getAllBrands() {
-        List<Brand> brands = brandRepository.findAll();
-        return brands.stream()
+    public List<BrandResponse> getAllBrands(GetBrandsRequest request) {
+        if (request.getPage() < 0) {
+            request.setPage(0);
+        }
+        if (request.getPageSize() < 0) {
+            request.setPageSize(8);
+        }
+        Pageable pageable = PageRequest.of(request.getPage(), request.getPageSize());
+        Page<Brand> brands = brandRepository.findAll(pageable);
+        return brands.getContent().stream()
                 .map(brandMapper::brandToBrandResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void deleteBrand(String id) {
